mudanças no estilo

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 
 body {
+    text-decoration: solid;
     color: white
 }
+
 
 ul {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
