--- a/style.css
+++ b/style.css
@@ -43,9 +43,6 @@ ul {
     }
 }
 
-#paragraph {
-    font-family: helvetica, sans-serif;
-}
 
 .link {
     text-decoration: none;
@@ -55,10 +52,9 @@ ul {
 a:hover{
     font-size: 30px;
     padding: 5px 10px;
-    background-color: white;
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-weight: 700;
-    
 }
 
 
@@ -97,8 +93,7 @@ a:hover{
     height: auto;
     width: 80%;
     margin:auto;
-    margin-top: 230px;
-    overflow: auto;
+    margin-top: 150px;
 }
 
 .pontos h2 {
@@ -111,10 +106,17 @@ a:hover{
 .soft {
     border: 2px green solid;
     text-align: center;
+}
+
+.soft li {
     list-style: none;
 }
 
-.soft ul {
-    list-style: none;
+.soft li:nth-child(2n+1) {
+    font-weight: bold;
+    text-decoration: underline 3px solid white;
 }
 
+.rodaPe {
+    border: 2px green solid;
+}
